; ModuleID = '/home/carl/AnghaBench/proxychains-ng/src/extr_core.c_gethostbyname_data_setstring.c'
source_filename = "/home/carl/AnghaBench/proxychains-ng/src/extr_core.c_gethostbyname_data_setstring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gethostbyname_data = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gethostbyname_data*, i8*)* @gethostbyname_data_setstring to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gethostbyname_data_setstring(%struct.gethostbyname_data* %0, i8* %1) #0 {
  %3 = alloca %struct.gethostbyname_data*, align 8
  %4 = alloca i8*, align 8
  store %struct.gethostbyname_data* %0, %struct.gethostbyname_data** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %3, align 8
  %6 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @snprintf(i32 %7, i32 4, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %8)
  %10 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %3, align 8
  %11 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %3, align 8
  %14 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %13, i32 0, i32 1
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i32 %12, i32* %15, align 4
  ret void
}

declare dso_local i32 @snprintf(i32, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
